<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/landschap1"
            android:contentDescription="@string/imageDescription" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ic_baseline_4k_24"
            android:contentDescription="@string/imageDescription" />


    </RelativeLayout>


    <TextView
        android:id="@+id/detailUserFirstName_title"
        style="@style/custom_title"
        android:text="@string/firstName" />

    <TextView
        android:id="@+id/detailUserFirstName"
        style="@style/custom_input"
        android:text="@string/input_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/detailUserFirstName_title" />

    <TextView
        android:id="@+id/detailUserLastName_title"
        style="@style/custom_title"
        android:text="@string/lastName" />

    <TextView
        android:id="@+id/detailUserLastName"
        style="@style/custom_input"
        android:text="@string/input_placeholder" />

    <TextView
        android:id="@+id/detailUserStreet_title"
        style="@style/custom_title"
        android:text="@string/street" />

    <TextView
        android:id="@+id/detailUserStreet"
        style="@style/custom_input"
        android:text="@string/input_placeholder" />

    <TextView
        android:id="@+id/detailUserStreetNr_title"
        style="@style/custom_title"
        android:text="@string/houseNumber" />

    <TextView
        android:id="@+id/detailUserStreetNr"
        style="@style/custom_input"
        android:text="@string/input_placeholder" />

    <TextView
        android:id="@+id/detailUserCity_title"
        style="@style/custom_title"
        android:text="@string/city" />

    <TextView
        android:id="@+id/detailUserCity"
        style="@style/custom_input"
        android:text="@string/input_placeholder" />

    <TextView
        android:id="@+id/detailUserPostal_title"
        style="@style/custom_title"
        android:text="@string/postal" />

    <TextView
        android:id="@+id/detailUserPostal"
        style="@style/custom_input"
        android:text="@string/input_placeholder" />

    <Button
        android:id="@+id/editUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/click_to_edit"
        android:textColor="@color/white" />


</LinearLayout>